--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ header {
     position: fixed;
     top: 0;
     min-height: 75px;
-    padding: 0px 20px;
+    padding: 0 20px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -175,6 +175,8 @@ nav>ul {
     padding: 5px;
 }
 
+/* how it works styling */
+
 #how-it-works {
     margin-top: 50px;
     display: flex;
@@ -251,6 +253,8 @@ nav>ul {
     transition: background-color 1s;
     color: var(--fc2);
 }
+
+/* footer styling */
 
 footer {
     margin-top: 30px;
